tests/lexer/invalid/08_invalid_operator.src
// Неправильные операторы
x ^ y
x ~ y
x \ y